@@ -2,6 +2,10 @@ checkbox (0.15.7) raring; urgency=low
 
   * Incremented version
 
+  [ Zygmunt Krynicki ]
+  * jobs/graphics.txt.in, jobs/suspend.txt.in: convert package resource 
+    programs to be compatible with plainbox
+
  -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 29 Mar 2013 10:46:30 +0000
 
 checkbox (0.15.6) raring; urgency=low
